[gd_scene load_steps=5 format=2]

[ext_resource path="res://battle/Track.tscn" type="PackedScene" id=1]
[ext_resource path="res://battle/Tracks.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 60 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 60 )

[node name="Tracks" type="Node2D"]
script = ExtResource( 2 )

[node name="Upper" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -25 )

[node name="Middle" parent="." instance=ExtResource( 1 )]

[node name="Lower" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 25 )

[node name="HitLeft" type="Area2D" parent="."]
position = Vector2( -64, 0 )
collision_mask = 8

[node name="Shape" type="CollisionShape2D" parent="HitLeft"]
position = Vector2( -20, 0 )
shape = SubResource( 1 )

[node name="HitRight" type="Area2D" parent="."]
position = Vector2( 64, 0 )
collision_layer = 2
collision_mask = 4

[node name="Shape" type="CollisionShape2D" parent="HitRight"]
position = Vector2( 20, 0 )
shape = SubResource( 2 )
[connection signal="body_entered" from="HitLeft" to="." method="_on_HitLeft_body_entered"]
[connection signal="body_entered" from="HitRight" to="." method="_on_HitRight_body_entered"]
